# stockPorkfolio

./: .gitignore  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  calculate_daily_pnl.py  calculate_stock_daily_pnl.py  check_batch.py  check_kis.py  check_transactions.py  debug_breakdown.py  debug_dashboard.py  debug_db.py  debug_price.py  debug_search.py  fetch_historical_market_data.py  fetch_historical_naver.py  fix_samsung_price.py  import_dividends.py  import_final.py  import_transactions.py  import_transactions2.py  kis_token_cache.json  pyproject.toml  recalculate_daily_performance.py  recalculate_holdings.py  reimport_transactions.py  run_batch.py  run_kr_batch.py  test_kis_api.py  test_naver_crawl.py  test_overtime_price.py  update_sectors.py
backend/alembic/: env.py
backend/alembic/versions/: 86e220a2e6c0_add_korean_table_and_column_comments.py  b7403b28bd9a_add_stock_daily_performances_table.py
backend/app/: celery_app.py  main.py
backend/app/api/routes/: analytics.py  auth.py  batch.py  dashboard.py  dividends.py  holdings.py  stocks.py  transactions.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  batch_job.py  daily_performance.py  dividend.py  holding.py  market_data.py  stock.py  stock_daily_performance.py  transaction.py  user.py
backend/app/schemas/: analytics.py  dashboard.py  dividend.py  holding.py  stock.py  transaction.py  user.py
backend/app/services/: auth_service.py  holding_service.py  krx_master.py
backend/app/tasks/: batch_tasks.py
frontend/: index.html  (+4 more)
(+59 files in other folders)
